implement for customer endpoints
